simple-nn/spartan/output-logs/job_4075295/error_4075295.txt
/cm/local/apps/slurm/var/spool/job4075295/slurm_script: line 17: pinn-1d/bin/activate: No such file or directory
  File "/scratch3/ram128/pinn-pc-1d/simple-nn/spartan/jobs/model_train.py", line 2
    %load_ext autoreload
    ^
SyntaxError: invalid syntax
